Product, Admin Devise

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
         <% end %>
         </li>
         <li class="active">
-            <%= link_to 'Store', root_path %>
+            <%= link_to 'Store', shop_path %>
         </li>
         <li class="divider"><span></span></li>
         <li class="active">
